tests/baselines/reference/genericFunduleInModule.errors.txt
tests/cases/compiler/genericFunduleInModule.ts(8,10): error TS2694: Namespace 'A' has no exported member 'B'.


==== tests/cases/compiler/genericFunduleInModule.ts (1 errors) ====
    module A {
        export function B<T>(x: T) { return x; }
        export module B {
            export var x = 1;
        }
    }
    
    var b: A.B;
             ~
!!! error TS2694: Namespace 'A' has no exported member 'B'.
    A.B(1);